# gnssyR

./: CLAUDE.md  Cargo.toml  FORGE.md  GAME_ARCHITECTURE.md  README.md  brainstorm.md  planning.md  primary_weapon.md  weapon mods.md
.claude/: settings.local.json
crates/: CLAUDE.md  index.md
crates/game/: CLAUDE.md  Cargo.toml  ENEMIES.md  game.md
crates/game/src/: CLAUDE.md  actor.rs  camera.rs  hud.rs  input.rs  lib.rs  loot.rs  main.rs  mod_part.rs  mode.rs  pause.rs  physics_layers.rs  player.rs  sandbox.rs  scene.rs  scrap.rs  state.rs  weapon.rs  world.rs
crates/game/src/enemy/: CLAUDE.md  dummy.rs  mod.rs
crates/game/src/namegen/: CLAUDE.md  gun_words.rs  mod.rs  mod_words.rs
crates/game/src/npc/: CLAUDE.md  forgemaster.rs  mod.rs
crates/game/src/scenes/: CLAUDE.md  mod.rs
crates/game/src/scenes/level1/: CLAUDE.md  mod.rs
crates/game/src/scenes/level_select/: CLAUDE.md  mod.rs
crates/game/src/scenes/main_menu/: CLAUDE.md  mod.rs
crates/game/src/scenes/sandbox/: CLAUDE.md  mod.rs  world.rs
crates/game/tests/: CLAUDE.md
crates/game/tests/integration/: main.rs
crates/game/tests/integration/scenes/: gfx_showcase.rs  mod.rs
crates/gfx/: CLAUDE.md  Cargo.toml  index.md  test.md
crates/gfx-software/: CLAUDE.md  Cargo.toml  index.md  test.md
crates/gfx-software/src/: CLAUDE.md  driver.rs  lib.rs  raster.rs
crates/gfx-software/tests/: driver.rs
crates/gfx-wgpu/: CLAUDE.md  Cargo.toml  index.md  test.md
crates/gfx-wgpu/src/: CLAUDE.md  buffer.rs  driver.rs  lib.rs  pipeline.rs  texture_store.rs  textured_pipeline.rs
crates/gfx-wgpu/src/shaders/: CLAUDE.md  fill.wgsl  stroke.wgsl  textured.wgsl
crates/gfx-wgpu/tests/: driver.rs
crates/gfx/src/: CLAUDE.md  color.rs  driver.rs  lib.rs  scene.rs  shape.rs  style.rs  transform.rs  view.rs
crates/gfx/src/path/: CLAUDE.md  builder.rs  mod.rs  parametric.rs  tessellate.rs
crates/gfx/tests/: graphics.rs
crates/input/: CLAUDE.md  Cargo.toml  index.md
crates/input/src/: CLAUDE.md  backend.rs  event.rs  gilrs_backend.rs  lib.rs  player.rs  simulated.rs
crates/physics/: CLAUDE.md  Cargo.toml  index.md
crates/physics/src/: CLAUDE.md  aabb.rs  body.rs  collider.rs  contact.rs  lib.rs  narrow.rs  world.rs
crates/physics/tests/: collision.rs
crates/window/: CLAUDE.md  Cargo.toml  index.md  test.md
crates/window/src/: CLAUDE.md  app.rs  egui_renderer.rs  lib.rs
crates/window/tests/: frame_loop.rs
tools/: test_planner.py
