[package]
name    = "window"
version = "0.1.0"
edition = "2021"

[dependencies]
gfx         = { workspace = true }
input       = { workspace = true }
winit       = { workspace = true }
egui        = { workspace = true }
egui-winit  = { workspace = true }

[dev-dependencies]
glam = { workspace = true }
